# difx-whole-repo

./: README  install-difx  setup.bash  setup.csh
applications/calcif2/: configure.ac
applications/calcserver/branches/radioastron20140201/src/: CALC5Server.c  CALC5Server_Params.c  CALC5Server_pipe.c  CALCServer.h  CALC_9_1_RA_Server.c  CALC_9_1_RA_Server.h  CALC_9_1_RA_Server_pipe.c  CALC_9_1_RA_Server_test.x  CALC_9_1_RA_xdr.c  CALC_xdr.c  DelayHandlerBasePipeInterface.h  DiFX_Delay_Server.c  DiFX_Delay_Server.h  DiFX_Delay_Server.x  DiFX_Delay_Server_Params.c  DiFX_Delay_Server_xdr.c  Makefile.am  checkDiFX_Delay_Server.c  dir.h  dir.x
applications/difx2fits/: ChangeLog  configure.ac
applications/difxcalc11/: ChangeLog
applications/difxfilterbank/: ChangeLog
applications/difxfilterbank/branches/difx-1.5/: README  configure.in
applications/difxfilterbank/branches/difx-1.5/src/: Makefile.am  difxfilterbank.cpp
applications/difxfilterbank/branches/difx-1.5/utilities/: Makefile.am
applications/doi/branches/USNO/guiServer/src/: ExecuteSystem.h  JobMonitorConnection.h  MachinesMonitorConnection.h  Makefile.am  PacketExchange.h  ServerSideConnection.h  difxFileOperation.cpp  difxFileTransfer.cpp  getDirectory.cpp  guiServer.cpp  machinesDefinition.cpp  startDifx.cpp  vex2difxRun.cpp
applications/mk5daemon/: ChangeLog
applications/mk5daemon/branches/difx-1.5/mk5dir/: Makefile.am  checkdir  mark5dir.cpp  mark5dir.h  mk5cp.cpp  mk5dir.cpp  mk5erase.cpp  mk5lock.cpp  recover.cpp  setvsn.cpp  testmod.cpp  vsn.cpp  watchdog.c  watchdog.cpp  watchdog.h
applications/mk5daemon/branches/mk6/src/: Makefile.am  Mark6.cpp  Mark6.h  Mark6DiskDevice.cpp  Mark6DiskDevice.h  Mark6Meta.cpp  Mark6Meta.h  Mark6Module.cpp  Mark6Module.h  condition.cpp  datacopy.cpp  difx.cpp  getdir.cpp  loadmon.cpp  logger.cpp  logger.h  mark5a.cpp  mark6.cpp  mark6.h  mark6diskdevice.cpp  mark6diskdevice.h  mk5daemon.cpp  mk5daemon.h  modules.cpp  monitor.cpp  options.cpp  proc.cpp  ssversions.cpp  sukill  test.cpp  vsis.cpp  vsis_commands.cpp  vsis_commands.h  watchdog.cpp  watchdog.h
applications/vex2difx/branches/difx-1.5/src/: Makefile.am  corrparams.cpp  corrparams.h  pystream.cpp  pystream.h  util.h  vex2difx.cpp  vex2script.cpp  vexload.cpp  vextables.cpp  vextables.h
applications/vex2difx/branches/multidatastream_refactor/src/: Makefile.am  applycorrparams.cpp  corrparams.cpp  corrparams.h  event.cpp  event.h  job.cpp  job.h  jobgroup.cpp  makejobs.cpp  makejobs.h  shelves.cpp  testmerge.cpp  util.cpp  util.h  vex2difx.cpp  vex_antenna.cpp  vex_antenna.h  vex_basebanddata.cpp  vex_basebanddata.h  vex_channel.cpp  vex_channel.h  vex_data.cpp  vex_data.h  vex_datastream.cpp  vex_datastream.h  vex_mode.cpp  vex_mode.h  vex_scan.h  vex_setup.cpp  vex_setup.h  vex_source.h  vex_stream.cpp  vex_stream.h  vexload.cpp  vexload.h  vexpeek.cpp  vextables.cpp  vextables.h
libraries/mark5access/branches/codif/: ChangeLog  Makefile.am  configure.ac
libraries/mark5access/branches/codif/examples/: Makefile.am  m5bstate.c  m5d.c  m5fb.c  m5fold.c  m5pcal.c  m5slice.c  m5spec.c  m5subband.c  m5test.c  m5time.c  m5timeseries.c  zerocorr.c
libraries/mark5access/branches/codif/mark5access/: Makefile.am  format_codif.c  format_k5.c  format_vdif.c  format_vdifb.c  mark5_format_d2k.c  mark5_format_kvn5b.c  mark5_format_mark4.c  mark5_format_mark5b.c  mark5_format_vlba.c  mark5_format_vlba_nomod.c  mark5_stream.c  mark5_stream.h  mark5_stream_file.c  mark5_stream_unpacker.c
libraries/mark6meta/branches/multislot/src/: Makefile.am  Mark6.cpp  Mark6.h  Mark6DiskDevice.cpp  Mark6DiskDevice.h  Mark6Meta.cpp  Mark6Meta.h  Mark6Module.cpp  Mark6Module.h  test.cpp
master_tags/: release-adam.pl  release.pl
master_tags/DiFX-1.5.3/applications/mk5daemon/mk5dir/: Makefile.am  checkdir  mark5dir.h  mk5cp.cpp  mk5dir.cpp  testmod.cpp  watchdog.h
master_tags/DiFX-1.5.3/utilities/vis2screen/: Makefile.am  configure.in  plotDiFX.py
master_tags/DiFX-RA-1.0.0/applications/calcserver/src/: CALC5Server_pipe.c  CALC_9_1_RA_Server_pipe.c  DelayHandlerBasePipeInterface.c  DiFX_Delay_Server.h  DiFX_Delay_Server.x  DiFX_Delay_Server_Params.h  Makefile.am  checkCALC_9_1_RA_Server.c  checkDiFX_Delay_Server.c
master_tags/DiFX-RA-1.0.1/applications/calcserver/: configure.ac  startCalcServer.in
master_tags/DiFX-RA-1.0.1/applications/calcserver/calc9.1.RA/: caxom.f  cdrvr.f
master_tags/DiFX-RA-1.0.1/applications/calcserver/src/: CALC_9_1_RA_Server.c  CALC_9_1_RA_Server_Params.c
mpifxcorr/: configure.ac
mpifxcorr/branches/fakedatastream/src/: Makefile.am  configuration.cpp  datastream.cpp  mk5.cpp
mpifxcorr/branches/outputbands/test/: Makefile.am  configuration_test.cpp
mpifxcorr/branches/wbrisken-NativeMark5/: Makefile.in  README  configure  configure.ac  configure.in
mpifxcorr/branches/wbrisken-NativeMark5/src/: Makefile.am  Makefile.in  configuration.cpp  configuration.h  core.cpp  datastream.cpp  fxmanager.cpp  fxmanager.h  mk5.cpp  mk5.h  mode.cpp  mpifxcorr.cpp  nativemk5.cpp  nativemk5.h  nativemk5_stubs.cpp  uvw.cpp  visibility.cpp
utilities/branches/difx-1.5/vis2screen/: ChangeLog  Makefile.am  configure.in
utilities/branches/radioastron20140201/calcif2/src/: CALCServer.h  DelayHandlerBase.cpp  DelayHandlerBase.h  DelayHandlerBasePipeInterface.h  DelayHandlerCalcServer9_1.cpp  DelayHandlerCalcServer9_1.h  DelayHandlerCalcServer9_1Interface.h  DelayHandlerCalcServer9_1_RA.cpp  DelayHandlerCalcServer9_1_RA.h  DelayHandlerCalcServer9_1_RAInterface.h  DelayHandlerDiFXDelayServer.cpp  DelayHandlerDiFXDelayServer.h  DelayHandlerDistributor.cpp  DelayHandlerDistributor.h  DelayHandlerDistributorInterface.h  DelayHandlerTest.cpp  DelayHandlerTest.h  DelayTimestamp.cpp  DelayTimestamp.h  DiFX_Delay_Server.h  DiFX_Delay_Server_xdr.c  MATHCNST.H  Makefile.am  calcif2.c  calcif3.cpp  checkCALCservers.cpp  checkdifxcalcrotation.c  difxcalc.c  difxcalc.h  difxcalc3.cpp  externaldelay.h
utilities/branches/radioastron20140201/calcif2/utils/: Makefile.am  compareDiFXims.c  genmachines.py  startdifx
(+1875 files in other folders)
