AC_INIT(printDiFX.cpp)

PACKAGE=printDiFX
VERSION=0.2

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

FXCORR_REQUIRED_VERSION=1.5.4
PKG_CHECK_MODULES(FXCORR, fxcorr >= $FXCORR_REQUIRED_VERSION)
AC_SUBST(FXCORR_CFLAGS)
AC_SUBST(FXCORR_LIBS)

DIFXMESSAGE_REQUIRED_VERSION=7.2
PKG_CHECK_MODULES(DIFXMESSAGE, difxmessage >= $DIFXMESSAGE_REQUIRED_VERSION)
AC_SUBST(DIFXMESSAGE_CFLAGS)
AC_SUBST(DIFXMESSAGE_LIBS)

dnl **********************************************************
dnl **** Set path for Intel Performance Primitive library ****
dnl **********************************************************
AC_ARG_WITH(ipp-root, [  --with-ipp-root=ROOT
                          ipp root is ROOT (optional).  Use env variable
                          IPPROOT otherwise.],
ipp_root="$withval", ipp_root="")
if test x"$ipp_root" != "x"; then
        IPP_CFLAGS="-I$ipp_root/include"
        IPP_LIBS="-L$ipp_root/sharedlib"
else
        IPP_CFLAGS="-I$IPPROOT/include"
        IPP_LIBS="-L$IPPROOT/sharedlib"
fi


if test "$DIFXBITS" == "32"; then
        IPP_LIBS=$IPP_LIBS" -lipps -lguide -lippvm -lippcore -lpthread"
elif test "$DIFXBITS" == "64"; then
        IPP_LIBS=$IPP_LIBS" -lippsem64t -lguide -lippvmem64t -liomp5 -lippcoreem64t -lpthread"
else
        IPP_LIBS=$IPP_LIBS" -lipps -lguide -lippvm -lippcore -lpthread"
        echo "32/64 bit unspecified - assuming 32 bit for IPP"
fi
AC_SUBST(IPP_CFLAGS)
AC_SUBST(IPP_LIBS)
dnl **********************************************************

dnl **********************************************************
dnl **** Look for RPFITS                                  ****
dnl **********************************************************
rpfits_enabled=true
AC_ARG_WITH(rpfits, [AS_HELP_STRING([--without-rpfits],[Disable rpfits output])])
if test x"$with_rpfits" = xno; then
        rpfits_enabled=false
else
        PWD=`pwd`
        AC_CHECK_HEADER([$DIFXROOT/include/RPFITS.h],
                [AC_DEFINE([HAVE_RPFITS], 1, [1=has RPFITS])],
                [rpfits_enabled=false])
fi
if test ${rpfits_enabled} = true; then
        RPFITS_CFLAGS="-I$DIFXROOT/include"
        if test x"$USEGFORTRAN" != "x"; then
              RPFITS_LIBS=" -lrpfits -lgfortran"
        else
              RPFITS_LIBS=" -lrpfits -lg2c"
        fi
else
        echo "RPFITS disabled"
        RPFITS_CFLAGS=""
        RPFITS_LIBS=""
fi
AC_SUBST(RPFITS_CFLAGS)
AC_SUBST(RPFITS_LIBS)

AM_CONDITIONAL(WITH_RPFITS, $rpfits_enabled)
dnl **********************************************************


AC_PROG_CXX

AC_OUTPUT(Makefile)
