bin_PROGRAMS = \
	mk5cp \
	mk5dir \
	testmod \
	vsn \
	recover \
	mk5erase

dist_bin_SCRIPTS = \
	checkdir

mk5cp_LDADD = \
	${M5ACCESS_LIBS}

mk5dir_LDADD = \
	${M5ACCESS_LIBS}

mk5erase_LDADD = \
	${M5ACCESS_LIBS}

vsn_LDADD = \
	${M5ACCESS_LIBS}

mk5cp_SOURCES = \
	watchdog.cpp \
	watchdog.h \
	mark5dir.cpp \
	mark5dir.h \
	mk5cp.cpp

mk5dir_SOURCES = \
	watchdog.cpp \
	watchdog.h \
	mark5dir.cpp \
	mark5dir.h \
	mk5dir.cpp

testmod_SOURCES = \
	watchdog.cpp \
	watchdog.h \
	testmod.cpp

vsn_SOURCES = \
	watchdog.cpp \
	watchdog.h \
	mark5dir.cpp \
	mark5dir.h \
	vsn.cpp

recover_SOURCES = \
	watchdog.cpp \
	watchdog.h \
	recover.cpp

mk5erase_SOURCES = \
	watchdog.cpp \
	watchdog.h \
	mark5dir.cpp \
	mark5dir.h \
	mk5erase.cpp
