bin_PROGRAMS = \
	vex2difx \
	vexpeek

LDADD = \
	$(top_builddir)/vex/libvex.la \
	-lfl

vex2difx_SOURCES = \
	vextables.h \
	vexload.h \
	corrparams.h \
	vextables.cpp \
	vex2difx.cpp \
	vexload.cpp \
	corrparams.cpp

vexpeek_SOURCES = \
	vextables.h \
	vexload.h \
	corrparams.h \
	vexpeek.cpp \
	vextables.cpp \
	vexload.cpp \
	corrparams.cpp
