bin_PROGRAMS = \
	vex2difx \
	vexpeek

LDADD = \
	$(top_builddir)/vex/libvex.la

vex2difx_SOURCES = \
	vex_antenna.cpp \
	vex_antenna.h \
	vex_basebanddata.cpp \
	vex_basebanddata.h \
	vex_clock.cpp \
	vex_clock.h \
	vex_datastream.cpp \
	vex_datastream.h \
	vextables.h \
	vextables.cpp \
	vexload.h \
	vexload.cpp \
	corrparams.h \
	corrparams.cpp \
	freq.h \
	freq.cpp \
	interval.h \
	interval.cpp \
	makejobs.h \
	makejobs.cpp \
	mediachange.h \
	mediachange.cpp \
	parserhelp.h \
	parserhelp.cpp \
	sanitycheck.h \
	sanitycheck.cpp \
	timeutils.h \
	timeutils.cpp \
	util.h \
	util.cpp \
	vex2difx.cpp

vexpeek_SOURCES = \
	vex_antenna.cpp \
	vex_antenna.h \
	vex_basebanddata.cpp \
	vex_basebanddata.h \
	vex_clock.cpp \
	vex_clock.h \
	vex_datastream.cpp \
	vex_datastream.h \
	vextables.cpp \
	vextables.h \
	vexload.cpp \
	vexload.h \
	timeutils.h \
	timeutils.cpp \
	interval.h \
	interval.cpp \
	util.h \
	util.cpp \
	vexpeek.cpp
