bin_PROGRAMS = \
	mk5cp \
	mk5dir \
	testmod \
	vsn

dist_bin_SCRIPTS = \
	checkdir

mk5cp_LDADD = \
	${M5ACCESS_LIBS}

mk5dir_LDADD = \
	${M5ACCESS_LIBS}


mk5cp_SOURCES = \
	mark5dir.cpp \
	mark5dir.h \
	mk5cp.cpp

mk5dir_SOURCES = \
	mark5dir.cpp \
	mark5dir.h \
	mk5dir.cpp

testmod_SOURCES = \
	watchdog.cpp \
	watchdog.h \
	testmod.cpp

vsn_SOURCES = \
	watchdog.cpp \
	watchdog.h \
	vsn.cpp
	
