bin_PROGRAMS = calcif2

if WITH_GSL
noinst_PROGRAMS = testpoly

testpoly_SOURCES = \
	poly.c \
	poly.h \
	testpoly.c
endif

calcif2_SOURCES = \
	calcif2.c \
	difxcalc.c \
	difxcalc.h \
	difxcalcrotation.c \
	difxcalcrotation.h \
	externaldelay.c \
	externaldelay.h \
	DiFX_Delay_Server_xdr.c \
	DiFX_Delay_Server.h \
	poly.c \
	poly.h \
	MATHCNST.H
