bin_PROGRAMS = \
	calcif2 \
	calcif3 \
	checkCALCservers

if WITH_GSL
noinst_PROGRAMS = testpoly

testpoly_SOURCES = \
	poly.c \
	poly.h \
	testpoly.c
endif

calcif2_SOURCES = \
	calcif2.c \
	difxcalc.c \
	difxcalc.h \
	difxcalcrotation.c \
	difxcalcrotation.h \
	externaldelay.c \
	externaldelay.h \
	DiFX_Delay_Server_xdr.c \
	DiFX_Delay_Server.h \
	poly.c \
	poly.h \
	MATHCNST.H

calcif3_SOURCES = \
	DelayHandlerBase.cpp \
	DelayHandlerBase.h \
	DelayHandlerBasePipeInterface.cpp \
	DelayHandlerBasePipeInterface.h \
	DelayHandlerCalcServer9_1.cpp \
	DelayHandlerCalcServer9_1.h \
	DelayHandlerCalcServer9_1Interface.h \
	DelayHandlerCalcServer9_1_RA.cpp \
	DelayHandlerCalcServer9_1_RA.h \
	DelayHandlerCalcServer9_1_RAInterface.h \
	DelayHandlerDiFXDelayServer.cpp \
	DelayHandlerDiFXDelayServer.h \
	DelayHandlerDistributor.cpp \
	DelayHandlerDistributor.h \
	DelayHandlerDistributorInterface.h \
	DelayTimestamp.cpp \
	DelayTimestamp.h \
	DiFX_Delay_Server_xdr.c \
	DiFX_Delay_Server.h \
	calcif3.cpp \
	difxcalc3.cpp \
	difxcalc3.h \
	difxcalcrotation.c \
	difxcalcrotation.h \
	externaldelay.c \
	externaldelay.h \
	poly.c \
	poly.h

checkCALCservers_SOURCES = \
	DelayHandlerBase.cpp \
	DelayHandlerBase.h \
	DelayHandlerBasePipeInterface.cpp \
	DelayHandlerBasePipeInterface.h \
	DelayHandlerCalcServer9_1.cpp \
	DelayHandlerCalcServer9_1.h \
	DelayHandlerCalcServer9_1Interface.h \
	DelayHandlerCalcServer9_1_RA.cpp \
	DelayHandlerCalcServer9_1_RA.h \
	DelayHandlerCalcServer9_1_RAInterface.h \
	DelayHandlerDiFXDelayServer.cpp \
	DelayHandlerDiFXDelayServer.h \
	DelayHandlerDistributor.cpp \
	DelayHandlerDistributor.h \
	DelayHandlerDistributorInterface.h \
	DelayTimestamp.cpp \
	DelayTimestamp.h \
	DiFX_Delay_Server_xdr.c \
	DiFX_Delay_Server.h \
	checkCALCservers.cpp

